--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     </p>
                 </div>
 
-                <form class="contact-form">
+                <form action="https://formsubmit.co/ryankickgrowth@gmail.com" method="POST" class="contact-form">
                     <!-- Hook this up to Netlify / Formspree / backend later -->
                     <div class="field">
                         <label for="name">Name / Alias</label>
